Fixed: index.html carousel bug: If image link to slide image is broken, all content within the slide will collapse and be hidden. This is fixed to remain the same size and display alt message without collapsing the content of the carousel

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -227,7 +227,9 @@ footer {
 /* ----------index.html---------- */
 
 #book-carousel {
+  display: block;
   width: 100%;
+  height: 375px;
   margin: 0 auto;
 }
 
@@ -238,7 +240,7 @@ section h2:first-of-type {
 }
 
 .carousel-item img {
-  max-height: 375px;
+  height: 375px;
   width: 100%;
   object-fit: cover;
 }
